CollisionsdetectionManager erzeugt nun Buffer und Shader, allerdings noch ohne Funktion
- shader-error.txt ignored
- Util.h mit #defines hinzugefügt
- Scene erzeugt nun Collisiondetectionmanager und ruft dessen Frame()-Funktion auf
- Collisiondetectionmanager erzeugt nun Buffer mit Dreiecksdaten und Vertexdaten, Unordered Access Views und startet einen ersten Computeshader, der aber noch keinen Effekt hat

--- a/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
+++ b/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
@@ -95,6 +95,9 @@
     <ClInclude Include="CollisionDetectionManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -104,6 +107,7 @@
     <None Include="VertexShader.hlsl" />
     <None Include="LightPixelShader.hlsl" />
     <None Include="LightVertexShader.hlsl" />
+    <None Include="1_BoundingBox_ComputeShader.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Kollisionserkennung DirectX.rc">
