erster Computeshader manipuliert nun Daten, die erfolgreich wieder auf die CPU kopiert werden
noch keine sinnvolle Berechnung im Compute Shader, dafür funktioniert Input und Output

--- a/.gitignore
+++ b/.gitignore
@@ -302,3 +302,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 Kollisionserkennung DirectX/shader-error.txt
+Kollisionserkennung DirectX/shader-error.txt
