--- a/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
+++ b/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
@@ -152,6 +152,7 @@
     <None Include="0_ComputeShaderGlobals.hlsl" />
     <None Include="2_SceneBoundingBox_CS.hlsl" />
     <None Include="3_FillCounterTrees_CS.hlsl" />
+    <None Include="4_GlobalCounterTree_CS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Kollisionserkennung DirectX.rc">
