FillTypeTree-Shader gefixt, einige Anpassungen für Constant Buffer, Threadanzahl Namensgebung angepasst
und alte Debug-Variablen aus 2_SceneBoundingBox_CS.hlsl entfernt

--- a/.gitignore
+++ b/.gitignore
@@ -303,3 +303,4 @@ $RECYCLE.BIN/
 *.lnk
 Kollisionserkennung DirectX/shader-error.txt
 Kollisionserkennung DirectX/shader-error.txt
+Kollisionserkennung DirectX/data/Kran.txt
