FillLeafIndexTree implementiert und Frame-Methode auseinandergezogen
und schon Buffer und Struct für den nächsten Shader angefangen

--- a/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
+++ b/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
@@ -154,6 +154,7 @@
     <None Include="3_FillCounterTrees_CS.hlsl" />
     <None Include="4_GlobalCounterTree_CS.hlsl" />
     <None Include="5_FillTypeTree_CS.hlsl" />
+    <None Include="6_FillLeafIndexTree_CS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Kollisionserkennung DirectX.rc">
