--- a/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
+++ b/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
@@ -161,4 +161,7 @@
       <Filter>Resource Files</Filter>
     </ResourceCompile>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="7_CellTrianglePairs_CS.hlsl" />
+  </ItemGroup>
 </Project>
