--- a/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
+++ b/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
@@ -154,8 +154,9 @@
     <None Include="3_FillCounterTrees_CS.hlsl" />
     <None Include="4_GlobalCounterTree_CS.hlsl" />
     <None Include="5_FillTypeTree_CS.hlsl" />
-    <None Include="6_FillLeafIndexTree_CS.hlsl" />
     <None Include="7_CellTrianglePairs_CS.hlsl" />
+    <None Include="6_FillLeafIndexTree_CS.hlsl" />
+    <None Include="8_1_RadixSort_ExclusivePrefixSum_CS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Kollisionserkennung DirectX.rc">
