--- a/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
+++ b/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
@@ -158,13 +158,11 @@
     <None Include="6_FillLeafIndexTree_CS.hlsl" />
     <None Include="8_1_RadixSort_ExclusivePrefixSum_CS.hlsl" />
     <None Include="8_2_RadixSort_ExclusivePrefixSum_CS.hlsl" />
+    <None Include="8_3_RadixSort_Sort_CS.hlsl" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Kollisionserkennung DirectX.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="8_3_RadixSort_Sort_CS.hlsl" />
   </ItemGroup>
 </Project>
