--- a/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
+++ b/Kollisionserkennung DirectX/Kollisionserkennung DirectX.vcxproj.filters
@@ -161,10 +161,18 @@
     <None Include="8_3_RadixSort_Sort_CS.hlsl" />
     <None Include="9_FindTrianglePairs_CS.hlsl" />
     <None Include="10_TriangleIntersections_CS.hlsl" />
+    <None Include="TriangleIntersection.hlsl">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Kollisionserkennung DirectX.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="TriangleIntersections_HLSL.hlsl">
+      <Filter>Source Files</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
