man kann jetzt mit einer Config-Datei gpu und Szene einstellen

--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,6 @@ $RECYCLE.BIN/
 Kollisionserkennung DirectX/shader-error.txt
 Kollisionserkennung DirectX/shader-error.txt
 Kollisionserkennung DirectX/data/Kran.txt
+Kollisionserkennung DirectX/data/Box.txt
+Kollisionserkennung DirectX/data/Kran_1.txt
+Kollisionserkennung DirectX/data/Kran_2.txt
